--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -71,7 +71,7 @@ jobs:
       - name: Build frontend assets
         shell: bash
         run: |
-          npm install -g npm@9
+          npm install -g npm@9 pnpm
           jq '.info.productVersion = "${{ steps.normalise_version.outputs.version }}"' wails.json > tmp.json
           mv tmp.json wails.json
           cd frontend
