--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -83,7 +83,6 @@ jobs:
         shell: bash
         run: |
           CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} \
-          -webview2 embed \
           -ldflags "-X main.version=v${{ steps.normalise_version.outputs.version }}"
 
       - name: Compress portable binary
@@ -100,19 +99,8 @@ jobs:
       - name: Build Windows NSIS installer
         shell: bash
         run: |
-          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} \
-          -nsis -webview2 embed \
+          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} -nsis \
           -ldflags "-X main.version=v${{ steps.normalise_version.outputs.version }}"
-
-      # - name: Codesign Windows NSIS installer
-      #   working-directory: ./build/bin
-      #   run: |
-      #     echo "Creating certificate file"
-      #     New-Item -ItemType directory -Path certificate
-      #     Set-Content -Path certificate\certificate.txt -Value '${{ secrets.WIN_SIGNING_CERT }}'
-      #     certutil -decode certificate\certificate.txt certificate\certificate.pfx
-      #     echo "Signing wocr installer"
-      #     & 'C:/Program Files (x86)/Windows Kits/10/bin/10.0.17763.0/x86/signtool.exe' sign /fd sha256 /tr http://ts.ssl.com /f certificate\certificate.pfx /p '${{ secrets.WIN_SIGNING_CERT_PASSWORD }}' wocr-${{ steps.normalise_platform_name.outputs.pname }}-installer.exe
 
       - name: Rename installer
         working-directory: ./build/bin
