--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         platform:
           - windows/amd64
-#          - windows/arm64
+          - windows/arm64
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -82,7 +82,7 @@ jobs:
       - name: Build Windows portable app
         shell: bash
         run: |
-          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} \
+          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} -webview2 embed \
           -ldflags "-X main.version=v${{ steps.normalise_version.outputs.version }}"
 
       - name: Compress portable binary
@@ -99,7 +99,7 @@ jobs:
       - name: Build Windows NSIS installer
         shell: bash
         run: |
-          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} -nsis \
+          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} -nsis -webview2 embed \
           -ldflags "-X main.version=v${{ steps.normalise_version.outputs.version }}"
 
       - name: Rename installer
