--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         platform:
           - windows/amd64
-          - windows/arm64
+          #- windows/arm64
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
