--- a/.github/workflows/release-macos.yaml
+++ b/.github/workflows/release-macos.yaml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   release:
+    failes-fast: false
     name: Release macOS App
     runs-on: macos-latest # We can cross compile but need to be on macOS to notarise
     strategy:
