--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         platform:
           - windows/amd64
-          - windows/arm64
+          # - windows/arm64
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -97,17 +97,11 @@ jobs:
           files: ./build/bin/wocr_${{ steps.normalise_version.outputs.version }}_${{ steps.normalise_platform.outputs.tag }}.zip
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build exe
-        shell: bash
-        run: |
-          CGO_ENABLED=1 wails build -clean -platform ${{ matrix.platform }} -webview2 embed \
-          -ldflags "-X main.version=v${{ steps.normalise_version.outputs.version }}"
-
       - name: Rename exe
         working-directory: ./build/bin
         run: Rename-Item -Path "wocr.exe" -NewName "wocr_${{ steps.normalise_version.outputs.version }}_${{ steps.normalise_platform.outputs.tag }}.exe"
 
-      - name: Upload release
+      - name: Upload release exe
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ steps.normalise_version.outputs.version }}
