--- a/.github/workflows/release-macos.yaml
+++ b/.github/workflows/release-macos.yaml
@@ -15,7 +15,7 @@ jobs:
     name: Release macOS App
     runs-on: macos-latest # We can cross compile but need to be on macOS to notarise
     strategy:
-      failes-fast: false
+      fail-fast: false
       matrix:
         platform:
           - darwin/amd64
