--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -83,7 +83,7 @@ jobs:
       - name: Build Windows portable app
         shell: bash
         run: |
-          CGO_ENABLED=1 wails build -clean -nsis -platform ${{ matrix.platform }} -webview2 embed \
+          CGO_ENABLED=1 wails build -clean -nsis -platform ${{ matrix.platform }} -webview2 download \
           -ldflags "-X main.version=v${{ steps.normalise_version.outputs.version }}"
 
       - name: Compress portable binary
