--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -13,7 +13,8 @@ on:
 jobs:
   release:
     name: Release Windows App
-    runs-on: windows-latest
+    # runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: false
       matrix:
