--- a/.github/workflows/release-winodws.yaml
+++ b/.github/workflows/release-winodws.yaml
@@ -13,8 +13,7 @@ on:
 jobs:
   release:
     name: Release Windows App
-    # runs-on: windows-latest
-    runs-on: windows-2019
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
@@ -32,13 +31,6 @@ jobs:
           tag=$(echo ${{ matrix.platform }} | sed -e 's/\//_/g' -e 's/amd64/x64/g')
           echo "tag=$tag" >> "$GITHUB_OUTPUT"
 
-      - name: Normalise platform name
-        id: normalise_platform_name
-        shell: bash
-        run: |
-          pname=$(echo "${{ matrix.platform }}" | sed 's/windows\///g')
-          echo "pname=$pname" >> "$GITHUB_OUTPUT"
-
       - name: Normalise version tag
         id: normalise_version
         shell: bash
@@ -54,7 +46,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: stable
+          go-version: 1.22.4
 
       - name: Install chocolatey
         uses: crazy-max/ghaction-chocolatey@v2
@@ -68,7 +60,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Build frontend assets
         shell: bash
